; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_diff-tree.c_diff_tree_commit_oid.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_diff-tree.c_diff_tree_commit_oid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.object_id = type { i32 }
%struct.commit = type { i32 }

@the_repository = common dso_local global i32 0, align 4
@log_tree_opt = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.object_id*)* @diff_tree_commit_oid to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @diff_tree_commit_oid(%struct.object_id* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.object_id*, align 8
  %4 = alloca %struct.commit*, align 8
  store %struct.object_id* %0, %struct.object_id** %3, align 8
  %5 = load i32, i32* @the_repository, align 4
  %6 = load %struct.object_id*, %struct.object_id** %3, align 8
  %7 = call %struct.commit* @lookup_commit_reference(i32 %5, %struct.object_id* %6)
  store %struct.commit* %7, %struct.commit** %4, align 8
  %8 = load %struct.commit*, %struct.commit** %4, align 8
  %9 = icmp ne %struct.commit* %8, null
  br i1 %9, label %11, label %10

10:                                               ; preds = %1
  store i32 -1, i32* %2, align 4
  br label %14

11:                                               ; preds = %1
  %12 = load %struct.commit*, %struct.commit** %4, align 8
  %13 = call i32 @log_tree_commit(i32* @log_tree_opt, %struct.commit* %12)
  store i32 %13, i32* %2, align 4
  br label %14

14:                                               ; preds = %11, %10
  %15 = load i32, i32* %2, align 4
  ret i32 %15
}

declare dso_local %struct.commit* @lookup_commit_reference(i32, %struct.object_id*) #1

declare dso_local i32 @log_tree_commit(i32*, %struct.commit*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
